# llm-econ-beliefs

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboard/: .gitignore  README.md  next.config.ts  package.json
llm_econ_beliefs/: __init__.py  experiment.py  model_registry.py  pricing.py  provider_tags.py  providers.py
paper/: .gitignore  README.md  _quarto.yml  build_tables.py  paper.qmd  references.bib
paper/referee-reports/: panel-rsos.md  rsos-editorial-summary.md  (+24 more)
results/: README.md  correlates-country.csv  correlates-model-summary.csv  correlates-posthoc.csv  correlates-sensitivity.csv  correlates-spearman.csv  elasticity-all-model-comparison.csv  elasticity-model-rollup.csv  failure-manifest.csv  model-registry.csv  policybench-scores.csv  quantity-registry.csv  top-rate-calibration.json
reviews/: codex-openweights-hardening-round2.md  codex-openweights-hardening.md  codex-pass2-summary.md
scripts/: build_comparison_artifacts.py  build_correlates.py  build_model_registry.py  build_policybench_scores.py  check_panel_grid.py  panel_grid_gate.py  rerun_failed_runs.py  resume_openweights.sh  run_codex_pass2.sh  run_v4_full_panel.py  run_v4_new_models.py  run_v4_per_quantity.py  supervise_openweights.sh  verify_paper_prose.py
tests/: test_build_correlates_hardening.py  test_correlates_pipeline.py  test_cost_propagation.py  test_country_comparison.py  test_experiment.py  test_pricing.py  test_prompt_identity.py  test_providers.py  test_runner_hardening.py  test_wording_comparison.py
(+591 files in other folders)
