[project]
name = "llm-econ-beliefs"
version = "0.1.0"
description = "Elicit and aggregate LLM beliefs about canonical economic parameters."
authors = [{ name = "Max Ghenis" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
providers = ["anthropic>=0.90.0", "litellm>=1.70.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_econ_beliefs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
